--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/play"
-db.default.user=play
-db.default.password="play"
+db.default.url="postgres://play:play@localhost:5432/play"
+#db.default.user=play
+#db.default.password="play"
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
